# pdi-RickAndMortyAPI

./: PROJETO.md  README.md  pyproject.toml
